--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -9,7 +9,7 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     border-top: 1px solid #CCC;
 }
